<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.Settings">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/lockOrientation"
        android:id="@+id/cbRotation"
        android:checked="false"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/englishLanguage"
        android:id="@+id/cbEnglish"
        android:checked="false"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/spanishLanguage"
        android:id="@+id/cbSpanish"
        android:checked="true"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/cbEnglish"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btSavePreferences"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:text="@string/languages"
        android:id="@+id/textView"
        android:layout_below="@+id/cbRotation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:text="@string/preferences"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
